# UnityInteropTest

./: LICENSE  README.md
Assets/Plugins/x64/unsafe.bundle/Contents/: Info.plist
Assets/Plugins/x64/unsafe.bundle/Contents/MacOS/: unsafe
Assets/Tests/: Tests.asmdef  UnsafeTest.cs
Plugin/: CMakeLists.txt  Plugin.cpp
ProjectSettings/: ProjectSettings.asset
